# fast_api_application_12_factor_principle

./: .dockerignore  .gitignore  Dockerfile  compose.yml  requirements.txt
bank_note_prediction_using_fast_api/: Makefile  README.md  pyproject.toml  requirements.txt
bank_note_prediction_using_fast_api/.github/workflows/: ci-cd.yml
bank_note_prediction_using_fast_api/bank_note_prediction_using_fast_api/api/: main.py
bank_note_prediction_using_fast_api/bank_note_prediction_using_fast_api/models/: predict.py  training.py
bank_note_prediction_using_fast_api/docs/: mkdocs.yml
bank_note_prediction_using_fast_api/docs/docs/: getting-started.md  index.md
bank_note_prediction_using_fast_api/docs/docs/development/: contributing.md  installation.md
bank_note_prediction_using_fast_api/docs/docs/structure/: api.md  data.md  models.md
bank_note_prediction_using_fast_api/models/: classifier.pkl
bank_note_prediction_using_fast_api/notebooks/: bank_notes.ipynb
bank_note_prediction_using_fast_api/tests/: test_api.py
